--- a/call page 2/call.html
+++ b/call page 2/call.html
@@ -22,9 +22,9 @@
                 <ul>
                   <li>
                     <span class="fa fa-envelope-o"></span>
-                    alijoukar2002@gmail.com
+                    
                   </li>
-                  <li><span class="fa fa-phone"></span> 09172148158</li>
+                  <li><span class="fa fa-phone"></span></li>
                   <li>
                     <span class="fa fa-map-marker"></span>مسجد آیت الله ربانی
                     شیرازی (مسجد) در محله پاییز شیراز و بلوار زاگرس شرقی، پائیز،
