--- a/index.html
+++ b/index.html
@@ -849,8 +849,8 @@
                         <div class="block-23 mb-3">
                             <ul>
                                 <li><span class="icon icon-map-marker"></span><span class="text">مسجد آیت الله ربانی شیرازی در محله پاییز شیراز و بلوار زاگرس شرقی، پائیز، بین 1 و خسروى واقع شده است.</span></li>
-                                <li><span class="icon icon-phone"></span><span class="text">09172148158</span></li>
-                               <li><span class="icon icon-envelope"></span><span class="text"> alijoukar2002@gmail.com </span></li>
+                                <li><span class="icon icon-phone"></span><span class="text"></span></li>
+                               <li><span class="icon icon-envelope"></span><span class="text">  </span></li>
                             </ul>
                         </div>
                     </div>
