--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-    <title>مسجد ایت اله ربانی شیراز</title>
+    <title>مسجد</title>
     <!-- 
-         تغییرات توسط pws گروه 
+      https://mzm.app بازطراحی  محمد زارعی مقدم 
+                    
         صفحه فرود سایت فروشگاهی :: دریافت شده از وب روبیک -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -743,7 +744,7 @@
                                 <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                             </div>
                             <div class="desc pl-3">
-                                <h3 class="heading"><a href="#">بازدید جانشین سپاه فجر استان فارس از فعالیت های جهادگران مسجد شهید ربانی</a></h3>
+                                <h3 class="heading"><a href="#">بازدید  مسجد</a></h3>
                             </div>
                         </div>
                     </div>
@@ -759,7 +760,7 @@
                             </div>
                             <div class="desc pl-3">
                                 <h3 class="heading"><a href="#"> 
-                                  برگزاری یادواره شهدای پایگاه شهید ربانی شیراز </a></h3>
+                                  برگزاری یادواره </a></h3>
                             </div>
                         </div>
                     </div>
@@ -774,7 +775,7 @@
                                 <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                             </div>
                             <div class="desc pl-3">
-                                <h3 class="heading"><a href="#"> فعالیت های جهادگران مسجد شهید آیت الله ربانی </a></h3>
+                                <h3 class="heading"><a href="#">برنامه های دیگر</a></h3>
                             </div>
                         </div>
                     </div>
@@ -785,7 +786,7 @@
 
 <!-- footer -->
     <footer class="ftco-footer ftco-bg-dark ftco-section">
-        <div class="container">
+        <div class="container">    
             <div class="row mb-5">
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4 bg-primary p-4">
