--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ https://mzm.app  بازطراحی  محمد زارعی مقدم
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a href="#" class="nav-link">صفحه نخست</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">درباره مسجــد</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">تماس با مسجــــد</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">ثبت نام و ورود</a></li>
                 </ul>
@@ -842,7 +841,7 @@ https://mzm.app  بازطراحی  محمد زارعی مقدم
                         All rights reserved | This template is translated with 
                           <i class="icon-heart" aria-hidden="true"></i>
                         by <a href="https://webrubik.com" target="_blank">webrubik.com    </a></p>
-                       <p> & change with personalization optimization by p W s group <a href="http://persian-developers.ir" target="_blank"> persian-developers.ir </a> </p>
+                       <p>بازطراحی محمد زارعی مقدم گوگل کنید اسممو<a href="httpS://mzm.app" target="_blank"> https://mzm.app </a> </p>
                 </div>
             </div>
         </div>
