--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-    <title>مسجد</title>
+    <title>لوروم ایپسوم</title>
     <!-- 
     
 https://mzm.app  بازطراحی  محمد زارعی مقدم 
