--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@ https://mzm.app  بازطراحی  محمد زارعی مقدم
                         All rights reserved | This template is translated with 
                           <i class="icon-heart" aria-hidden="true"></i>
                         by <a href="https://webrubik.com" target="_blank">webrubik.com    </a></p>
-                       <p>بازطراحی محمد زارعی مقدم گوگل کنید اسممو<a href="httpS://mzm.app" target="_blank"> https://mzm.app </a> </p>
+                       <p>بازطراحی محمد زارعی مقدم گوگل کنید اسممو<a href="httpS://mzm.app" target="_blank"> https://mzm.app با تشکر از قالب رایگان وب روبیک</a> </p>
                 </div>
             </div>
         </div>
